--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
             <a href="https://www.facebook.com/IsFak/" class="facebook"><img src="logo-fb.png" class="logo">Facebook</a>
             <p class="p2-footer">#Project.Version.1.0</p>
         </div>
-    <script src="data.js" type="text/javascript" />
+    <script src="data.js" type="text/javascript" /></script>
     </body>
 </html>
