--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
             <a href="https://www.facebook.com/IsFak/" class="facebook"><img src="logo-fb.png" class="logo">Facebook</a>
             <p class="p2-footer">#Project.Version.1.0</p>
         </div>
-    <script src="data.js" type="text/javascript" /></script>
+    <script src="data.js" type="text/javascript" >
+        const nama = "Haqqi Nazili"
+
+console.log (nama)
+
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}</script>
     </body>
 </html>
