--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <!-- Content -->
         <div class="container-content-about">
             <p class="about-content">Web ini dimiliki oleh XE-1 SMA WACHID HASYIM 2 TAMAN yang dibuat oleh Muhammad Haqqi Nazili
-               pada tanggal 24/5/2024 hingga ?/?/2024 <br>
+               pada tanggal 24/5/2024 hingga 2/6/2024 <br>
                Terima Kasih!! telah berkunjung ke website kami salam "Religi, Berprestasi..."
             </p>
         </div>
